--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
     padding: 0;
     font-family: 'Comic Neue', sans-serif;
     box-sizing: border-box;
+    transition-duration: 0.3s;
 }
 .wrapper
 {
@@ -166,11 +167,23 @@ p:first-of-type
 {
     body
     {
-        font-size: 0.6em;
+        font-size: 1.2em;
     }
     .heading
     {
         margin: 1px;
+    }
+    h1
+    {
+        font-size: 1.6em;
+    }
+    h3
+    {
+        font-size: 1em;
+    }
+    h5
+    {
+        font-size: 0.8em;
     }
     .inp>*, .ips>*
     {
