--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@
     display: block;
     border: 1px solid rgb(179, 179, 179);
 }
-button,input,label
+button,input,label,textarea
 {
     padding: 5px;
     border-radius: 5px;
@@ -41,7 +41,7 @@ button,input,label
     box-shadow: 0 2px 2px 2px rgba(0,0,0,0.2);
     border: 1px solid grey;
 }
-input
+input, textarea
 {
     font-family: 'Teko';
 }
@@ -50,7 +50,7 @@ label
     border: none;
     box-shadow: none;
 }
-button:active,input:active
+button:active
 {
     transform: scale(1.1);
 }
