--- a/style.css
+++ b/style.css
@@ -84,21 +84,25 @@ h3,h5
     display: block;
     margin: 10px 0;
 }
-.inp, .ips
+.inp
 {
     box-shadow: 0 0 5px 2px rgba(0,0,0,0.2);
     padding: 20px;
     overflow: hidden;
-    display: none;
+    display: flex;
     justify-content: space-evenly;
     align-content: center;
     flex-wrap: wrap;
 }
-.inp>*, .ips>*
+.inp>*
 {
     flex-basis: 40%;
     margin: 10px;
     text-align: center;
+}
+.full
+{
+    flex-basis: 100%;
 }
 .ranged
 {
@@ -109,6 +113,10 @@ span
 {
     display: block;
     flex-basis: 100%;
+}
+a
+{
+    display: block;
 }
 hr{
     margin: 10px auto;
@@ -123,10 +131,6 @@ p:first-of-type
     overflow: hidden;
     padding: 12px;
     text-align: center;
-}
-.btns
-{
-    margin-bottom: 15px;
 }
 #extend
 {
