--- a/style.css
+++ b/style.css
@@ -84,6 +84,11 @@ h3,h5
     display: block;
     margin: 10px 0;
 }
+#plus
+{
+    display: block;
+    margin: 0 auto;
+}
 .inp
 {
     box-shadow: 0 0 5px 2px rgba(0,0,0,0.2);
