--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@
 }
 
 .wrapper header p {
-  margin: 0.25em auto;
+  margin: 0.3em auto;
   font-weight: lighter;
 }
 
@@ -41,17 +41,16 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+}
+
+.wrapper .content .borderAdder {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
 }
 
 .wrapper .content .canvas {
-  -ms-flex-preferred-size: 70%;
-      flex-basis: 70%;
-  width: auto;
-  min-width: 80%;
-  margin: 0 auto;
-  padding: 5%;
+  padding: 3% 0;
 }
 
 .wrapper .content .canvas #c {
@@ -59,7 +58,65 @@
   display: block;
   -webkit-box-shadow: 0px 0px 15px 2px #a8a8a8;
           box-shadow: 0px 0px 15px 2px #a8a8a8;
-  border: 1px solid #b3b3b3;
+}
+
+.wrapper .content .toRight {
+  border-left: 1px solid #aaa;
+}
+
+.wrapper .content .toRight .imginp input {
+  display: block;
+  margin: 5% auto;
+}
+
+.wrapper .content .toRight .app {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.wrapper .content .toRight .app .appendie {
+  margin: 1em;
+  -webkit-box-shadow: 0 0 15px 2px #a8a8a8;
+          box-shadow: 0 0 15px 2px #a8a8a8;
+  width: 100%;
+  padding: 1em;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.wrapper .content .toRight .app .appendie .appendieInput {
+  margin-bottom: 1em;
+}
+
+.wrapper .content .toRight .app .appendie .appendieLabel {
+  margin: 0.5em;
+}
+
+.wrapper .content .toRight .app .appendie .subAppendie {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding: 2em;
 }
 
 @media all and (max-width: 700px) {
@@ -69,14 +126,57 @@
   .wrapper header p {
     font-size: 0.6em;
   }
+  .wrapper .content {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+  .wrapper .content .borderAdder {
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+  }
+  .wrapper .content .canvas {
+    padding: 3%;
+  }
+  .wrapper .content .canvas #c {
+    margin: auto;
+  }
+  .wrapper .content .toRight {
+    border: none;
+  }
+}
+
+@media all and (max-width: 500px) {
+  .content {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+  .content .borderAdder {
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+  }
+  .content .canvas {
+    padding: 0;
+  }
+  .content .canvas #c {
+    margin: 0;
+  }
+}
+
+@media all and (max-width: 290px) {
+  .wrapper .content {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+  .wrapper .content .borderAdder {
+    width: 100%;
+  }
+  .wrapper .content .canvas #c {
+    margin: auto;
+  }
 }
 
 /****************************/
 .hide {
   display: none;
-}
-
-.borderAdder {
-  border: 1px solid teal;
 }
 /*# sourceMappingURL=style.css.map */
