--- a/style.scss
+++ b/style.scss
@@ -67,7 +67,7 @@
                     padding: 0;
                     flex-basis: 30%;
                     overflow: hidden;
-                    #save{
+                    .saveBtn1{
                         display: block;
                         margin: auto;
                         width: 100%;
