--- a/style.scss
+++ b/style.scss
@@ -14,7 +14,6 @@
     {
         font-size: inherit;
         overflow: hidden;
-        background:rgb(255, 0, 76);
         text-align: center;
         .heading
         {
@@ -22,15 +21,31 @@
         }
         h1
         {
-            font-family: sans-serif;
+            font-family: 'Indie Flower',sans-serif;
             font-weight: 700;
             font-size: 3em;
-            margin: 0.25em auto;
+            margin: 0.5em auto;
         }
         p
         {
-            margin: 0.3em auto;
+            margin: 0.7em auto;
             font-weight: lighter;
+        }
+    }
+    .intro{
+        background-color: #def;
+        text-align: center;
+        padding: 10px;
+        font-size: 1em;
+        h3{
+            font-family: 'Comic Neue', sans-serif;
+            font-size: 1.4em;
+        }
+        h3:hover{
+            cursor: pointer;
+        }
+        li{
+            list-style-type: none;
         }
     }
     .content{
@@ -57,6 +72,7 @@
                 align-items: center;
                 justify-content: space-between;
                 .pin{
+                    order: 3;
                     flex-basis: 30%;
                     #pin{
                         width: 100%;
@@ -64,6 +80,7 @@
                     }
                 }
                 .save{
+                    order: 2;
                     padding: 0;
                     flex-basis: 30%;
                     overflow: hidden;
@@ -74,6 +91,7 @@
                     }
                 }
                 .imginp{
+                    order: 1;
                     flex-basis: 30%;
                     max-width: 50%;
                     overflow: hidden;
@@ -112,6 +130,22 @@
             }
         }
     }
+    footer{
+        text-align: center;
+        padding: 2em;
+        li{
+            list-style-type: none;
+            color: white;
+            a{
+                display: inline-block;
+                color: white;
+                opacity: 0.7;
+            }
+            a:hover{
+                opacity: 1;
+            }
+        }
+    }
 }
 
 @media all and (max-width: 830px){
@@ -121,6 +155,11 @@
                 font-size: 1.5em;
             }
             p{
+                font-size: 0.6em;
+            }
+        }
+        .intro{
+            li{
                 font-size: 0.6em;
             }
         }
