--- a/style.scss
+++ b/style.scss
@@ -21,7 +21,7 @@
         }
         h1
         {
-            font-family: 'Teko',sans-serif;
+            font-family: 'Indie Flower',sans-serif;
             font-weight: 700;
             font-size: 3em;
             margin: 0.5em auto;
