--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@
 }
 
 .wrapper header h1 {
-  font-family: 'Teko',sans-serif;
+  font-family: 'Indie Flower',sans-serif;
   font-weight: 700;
   font-size: 3em;
   margin: 0.5em auto;
