--- a/style.css
+++ b/style.css
@@ -98,9 +98,9 @@
 }
 
 .wrapper .content .toRight .parentPin .pin {
-  -webkit-box-ordinal-group: 4;
-      -ms-flex-order: 3;
-          order: 3;
+  -webkit-box-ordinal-group: 3;
+      -ms-flex-order: 2;
+          order: 2;
   -ms-flex-preferred-size: 30%;
       flex-basis: 30%;
 }
@@ -111,9 +111,9 @@
 }
 
 .wrapper .content .toRight .parentPin .save {
-  -webkit-box-ordinal-group: 3;
-      -ms-flex-order: 2;
-          order: 2;
+  -webkit-box-ordinal-group: 4;
+      -ms-flex-order: 3;
+          order: 3;
   padding: 0;
   -ms-flex-preferred-size: 30%;
       flex-basis: 30%;
@@ -193,9 +193,9 @@
 }
 
 .wrapper footer {
-  margin-top: 10px;
+  margin-top: 2.5em;
   text-align: center;
-  padding: 2em;
+  padding: 1.75em;
 }
 
 .wrapper footer li {
