--- a/style.scss
+++ b/style.scss
@@ -73,7 +73,7 @@
                 align-items: center;
                 justify-content: space-between;
                 .pin{
-                    order: 3;
+                    order: 2;
                     flex-basis: 30%;
                     #pin{
                         width: 100%;
@@ -81,7 +81,7 @@
                     }
                 }
                 .save{
-                    order: 2;
+                    order: 3;
                     padding: 0;
                     flex-basis: 30%;
                     overflow: hidden;
@@ -132,9 +132,9 @@
         }
     }
     footer{
-        margin-top: 10px;
+        margin-top: 2.5em;
         text-align: center;
-        padding: 2em;
+        padding: 1.75em;
         li{
             list-style-type: none;
             color: white;
