--- a/style.scss
+++ b/style.scss
@@ -25,6 +25,7 @@
             font-weight: 700;
             font-size: 3em;
             margin: 0.5em auto;
+            text-shadow: 0px 3px 5px black;
         }
         p
         {
@@ -37,14 +38,18 @@
         text-align: center;
         padding: 10px;
         font-size: 1rem;
+
+
+        
         h3{
             font-family: 'Comic Neue', sans-serif;
-            font-size: 1.4em;
+            font-size: 1.3em;
         }
         h3:hover{
             cursor: pointer;
         }
         li{
+            margin: 0.25em;
             list-style-type: none;
             font-size: 0.9em;
         }
@@ -122,7 +127,7 @@
                         margin: 0.5em; 
                     }
                     .subAppendie{
-                        background-color: #ddd;
+                        background-color: #def;
                         display: flex;
                         flex-direction: column;
                         padding: 2em;
@@ -136,6 +141,7 @@
         text-align: center;
         padding: 1.75em;
         li{
+            margin: 0.25em;
             list-style-type: none;
             color: white;
             a{
