--- a/style.css
+++ b/style.css
@@ -41,6 +41,7 @@
   text-align: center;
   padding: 10px;
   font-size: 1rem;
+  overflow: hidden;
 }
 
 .wrapper .intro h3 {
@@ -72,6 +73,10 @@
 
 .wrapper .content .canvas {
   padding: 3% 0;
+}
+
+.wrapper .content .canvas #floatCanvas {
+  z-index: 99;
 }
 
 .wrapper .content .canvas #floatCanvas #c {
@@ -124,7 +129,7 @@
 
 .wrapper .content .toRight .parentPin .save .saveBtn1 {
   color: white;
-  background-color: #0080ff;
+  background-color: #2a4663;
   border: 2px solid #eee;
   border-radius: 5%;
   padding: 0.25rem;
@@ -134,9 +139,11 @@
   display: block;
   margin: auto;
   width: 100%;
+  opacity: 0.8;
 }
 
-.wrapper .content .toRight .parentPin .save .saveBtn1:active {
+.wrapper .content .toRight .parentPin .save .saveBtn1:focus {
+  opacity: 1;
   border: 2px solid black;
 }
 
@@ -232,19 +239,30 @@
   padding: 1.75em;
 }
 
-.wrapper footer li {
+.wrapper footer ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.wrapper footer ul li {
   margin: 0.25em;
   list-style-type: none;
   color: white;
 }
 
-.wrapper footer li a {
+.wrapper footer ul li a {
+  text-decoration: none;
   display: inline-block;
   color: white;
   opacity: 0.7;
+  margin-right: 10px;
 }
 
-.wrapper footer li a:hover {
+.wrapper footer ul li a:hover {
   opacity: 1;
 }
 
@@ -300,6 +318,10 @@
     margin-bottom: 1em;
     width: 100%;
     max-width: 100%;
+  }
+  .wrapper .content .toRight .app #plus {
+    width: 80%;
+    max-width: 90%;
   }
 }
 
