--- a/style.scss
+++ b/style.scss
@@ -138,10 +138,6 @@
                 flex-direction: column;
                 align-items: center;
                 justify-content: center;
-                #plus{
-                    width: 25%;
-                    max-width: 50%;
-                }
                 .appendie
                 {
                     margin: 1em;
@@ -162,6 +158,14 @@
                         flex-direction: column;
                         padding: 2em;
                     }
+                }
+            }
+            .plusBtnParent{
+                #plus{
+                    display: block;
+                    margin: auto;
+                    width: 25%;
+                    max-width: 50%;
                 }
             }
         }
