--- a/style.scss
+++ b/style.scss
@@ -246,7 +246,7 @@
                         max-width: 100%;
                     }
                 }
-                .app{
+                .plusBtnParent{
                     #plus{
                         width:80%;
                         max-width: 90%;
